--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
 
     </div>
-        <div class="container_major">     
+        <div class="container_major" id="portafolio">     
             <div class="container_sons"><p class="titulo_major">My Recent Works</p></div>
             <div class="container_sons2">
                 <div><img src="img/Img Placeholder (1).png" alt="img" class="imagen1"></div>
@@ -213,7 +213,7 @@
     </div>
 </main>
     <footer>
-            <div class="footer_body">
+            <div class="footer_body" id="about">
             <div><p class="text_footer">About me</p></div>
             <div><p class="text_footer_1">Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p></div>
                 <button class="button_footer" id="Get_my_resume"><p class="text_buttom_footer">Get my resume</p></button>
@@ -248,7 +248,7 @@
 
     </footer>
         <form action="" method="POST" id="form">
-    <div class="container_white">
+    <div class="container_white" id="contact">
             <div class="conainer_white_text">
                 I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.
             </div>
