--- a/index.html
+++ b/index.html
@@ -247,22 +247,22 @@
         </div>
 
     </footer>
-        <form action="" method="POST" id="form">
+<form action="https://formspree.io/f/xldjnrlk" method="POST">
     <div class="container_white" id="contact">
             <div class="conainer_white_text">
                 I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.
             </div>
-        <div class="conatiner_email">
+            <div class="conatiner_email">
             <button class="button_email" type="submit"><p class="text_buttom_email">Get in touch</p></button>
             <p class="warnings" id="warnings"></p>
                 <div class="container_name">
-                    <input type="Name" id="name" placeholder="Full name" required>                                    
+                    <input type="Name" id="name" placeholder="Full name"  required>                                    
                 </div>
                 <div class="email">
-                    <input type="email" id="Email" placeholder="Email address" required>
+                    <input type="email" id="email" name="email" placeholder="Email address" required>
                 </div>
                 <div class="Write">
-                    <input type="write" id="Write" placeholder="Write me something...">
+                    <input type="write" id="Write" name="message" placeholder="Write me something...">
                 </div>
                 <div class="last_name">
                     <input type="last" id="last" placeholder="Last name"  >
